// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches default snap 1`] = `
<button
  class="Button Button--medium"
>
  test default button
</button>
`;

exports[`renders a start icon 1`] = `
<button
  class="Button Button--medium"
>
  <span
    class="Button--startIcon"
  >
    &lozenge;
  </span>
  test default button
</button>
`;

exports[`renders an end icon 1`] = `
<button
  class="Button Button--medium"
>
  test default button
  <span
    class="Button--endIcon"
  >
    &loang;
  </span>
</button>
`;
